- Rename classes to DetailedHvdcConverter and SimplifiedHvdcConverter for better consistency with the manual. - Small fixes in the logs. - rename private method to getSafeNodeForComponent.
Signed-off-by: Landry Huet <landry.huet@supergrid-institute.com>